security/main.tf
resource "aws_security_group" "ec2_sg" {
  name        = "web_sg"
  description = "Security group for web instances"
  vpc_id      = aws_vpc.main.id

  // Define your security group rules here
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
  resource "aws_security_group" "rds_sg" {
  name        = "db_sg"
  description = "Security group for database instances"
  vpc_id      = aws_vpc.main.id

  // Define your security group rules here
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  }
